# corgi_sim

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
controllers/corgi_ros2/: corgi_ros2.py
controllers/force_plate/: force_plate.py
corgi_driver_pkg/: Controller_TB.py  __init__.py  corgi_driver.py  force_plate.py
launch/: Corgi_launch.py  run_simulation.launch.py
protos/: CorgiRobotABAD_IFS.proto  leg_old.proto
resource/: COT_Exp_Index_140_OLD.csv  COT_Exp_Index_141_OLD.csv  corgi.urdf  force_plate.urdf
src/: corgi_sim_pos.cpp  corgi_sim_trq.cpp
srv/: NodeGetContactPoints.srv  NodeGetField.srv
worlds/: .IFS_Proto.wbproj  IFS_Proto.wbt  corgi_force_plate_proto.wbt  corgi_old_proto.wbt  corgi_origin.wbt  corgi_stair_proto.wbt  corgi_uneven.wbt  corgi_uneven_proto.wbt  corgi_uneven_proto_new.wbt  leg_old_proto.wbt
